<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderboardFragment">

    <TextView
        android:id="@+id/leaderboardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:text="@string/leaderboard"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaderboardText"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@android:color/transparent">

        <TextView
            android:id="@+id/name_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="41dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:paddingEnd="41dp"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboard_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/name_column"
            android:padding="@dimen/activity_vertical_margin"
            android:scrollbars="vertical" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/leaderboard_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/white"
        android:indeterminate="true" />

</RelativeLayout>