<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    tools:context=".Register">

    <ImageView
        android:id="@+id/register_covid19icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/app_icon" />

    <LinearLayout
        android:id="@+id/registerLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_covid19icon"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/momcake_bold_wyona"
            android:text="Register"
            android:textColor="#000"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_baseline_account_box_24"
            android:text="@string/username"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:hint="@string/enter_here"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:text="Email:"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/black"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:hint="@string/enter_here" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:text="Password:"
            android:textColor="#000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="@color/black"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:hint="@string/enter_here"/>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/LoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerLinear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/login_page"
        android:textColor="@color/black"
        android:textSize="20dp" />

</RelativeLayout>